--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "5.0.0",
-    "@testing-library/react": "9.4.0",
-    "@testing-library/user-event": "8.0.3",
-    "@types/jest": "24.9.0",
-    "@types/node": "13.1.7",
-    "@types/react": "16.9.17",
-    "@types/react-dom": "16.9.4",
-    "@types/styled-components": "4.4.2",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-scripts": "3.3.0",
-    "styled-components": "5.0.0",
-    "typescript": "3.7.5"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "6.1.6",
+    "typescript": "3.2.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
+    "@types/jest": "29.5.11",
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.46",
+    "@types/react-dom": "18.2.18",
+    "@types/styled-components": "5.1.34"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,7 +26,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
