--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "app-weather",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
-    "styled-components": "6.1.6",
-    "typescript": "3.2.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.17.0",
@@ -17,19 +15,23 @@
     "@types/node": "20.10.5",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
-    "@types/styled-components": "5.1.34"
+    "@typescript-eslint/eslint-plugin": "6.14.0",
+    "@typescript-eslint/parser": "6.14.0",
+    "@vitejs/plugin-react": "4.2.1",
+    "eslint": "8.55.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
+    "styled-components": "6.1.6",
+    "typescript": "5.2.2",
+    "vite": "5.0.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "start": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "test": "echo 'test'",
+    "type-check": "tsc"
   },
   "engines": {
     "node": ">=20"
