--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,13 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* Tests */
+    "types": ["vitest/globals"]
   },
-  "include": ["src"],
+
+  "include": ["src", "src/test/setup.ts"],
+  "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
