--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     "@typescript-eslint/eslint-plugin": "6.14.0",
     "@typescript-eslint/parser": "6.14.0",
     "@vitejs/plugin-react": "4.2.1",
-    "@vitest/coverage-v8": "^1.1.1",
-    "@vitest/ui": "^1.1.1",
+    "@vitest/coverage-v8": "1.1.1",
+    "@vitest/ui": "1.1.1",
     "eslint": "8.55.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.5",
-    "jsdom": "^23.0.1",
+    "jsdom": "23.0.1",
     "styled-components": "6.1.6",
     "typescript": "5.2.2",
     "vite": "5.0.12",
-    "vitest": "^1.1.1"
+    "vitest": "1.1.1"
   },
   "scripts": {
     "start": "vite",
