--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 VITE_VERSION=$npm_package_version
 VITE_NAME=Weather App
 
+VITE_APP_URL=http://localhost:5173
+
 VITE_API_URL=https://api.openweathermap.org/data/2.5
 VITE_API_KEY=
