--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "1.41.1",
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
@@ -20,6 +21,7 @@
     "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-v8": "1.1.1",
     "@vitest/ui": "1.1.1",
+    "dotenv": "16.4.1",
     "eslint": "8.55.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.5",
@@ -37,6 +39,8 @@
     "test": "vitest run",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
+    "e2e": "npx playwright test",
+    "e2e:ui": "npx playwright test --ui",
     "type-check": "tsc"
   },
   "engines": {
