--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "test:coverage": "vitest run --coverage",
     "e2e": "npx playwright test",
     "e2e:ui": "npx playwright test --ui",
+    "e2e:report": "npx playwright show-report",
     "type-check": "tsc"
   },
   "engines": {
