--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.378.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@playwright/test": "1.41.1",
@@ -13,7 +19,7 @@
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
     "@types/jest": "29.5.11",
-    "@types/node": "20.10.5",
+    "@types/node": "^20.12.8",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "@typescript-eslint/eslint-plugin": "6.14.0",
@@ -21,12 +27,15 @@
     "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-v8": "1.1.1",
     "@vitest/ui": "1.1.1",
+    "autoprefixer": "^10.4.19",
     "dotenv": "16.4.1",
     "eslint": "8.55.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.5",
     "jsdom": "23.0.1",
+    "postcss": "^8.4.38",
     "styled-components": "6.1.6",
+    "tailwindcss": "^3.4.3",
     "typescript": "5.2.2",
     "vite": "5.0.13",
     "vitest": "1.1.1"
